Fixes readthedocs theme problems with collapsed tables

--- a/sphinxcontrib/needs/css/common.css
+++ b/sphinxcontrib/needs/css/common.css
@@ -63,6 +63,10 @@ div.dt-buttons button {
     clear: both;
 }
 
+.toggle .header p{
+    display: inline;
+}
+
 .toggle .header:after {
     content: " ▷";
 }
